# gomoku-agent

./: .gitignore  README.md  analyze.py  analyze_algo.py  benchmark.py  benchmark_algo.py  demo.ipynb  main.py  performance_metrics.py  pyproject.toml  requirements.txt
gomoku/: board.py  game.py  heuristic.py  move_gen.py  search.py
results/benchmark/: benchmark_20260501_185144.csv  benchmark_20260501_185144.txt
results/benchmark_algo/: benchmark_algo_20260501_185015.csv  benchmark_algo_20260501_185015.txt
tests/: test_board.py  test_heuristic.py  test_move_gen.py  test_search.py
